# copilot-cli-agent-pulse

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agent_pulse.py  agent_pulse.tcss  patch_js.py  pyproject.toml  quickstart.sh  requirements.txt  start.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pages.yml  release.yml
Formula/: agent-pulse.rb
experimental/ink/: package.json
experimental/ink/src/: index.js
experimental/ink/src/components/: AgentPulse.js  AgentTypeBreakdown.js  EventLog.js  Header.js  HistoryTable.js  LiveMetrics.js  SparklinePanel.js  StatusBar.js
experimental/ink/src/hooks/: useScanner.js
experimental/ink/src/utils/: dataStore.js  scanner.js
site/: index.html
