[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-pulse"
version = "1.0.0"
description = "Real-time agent tracking dashboard for GitHub Copilot CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "DUBSOpenHub"},
]
keywords = ["copilot", "cli", "dashboard", "agents", "monitoring", "terminal", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
agent-pulse = "agent_pulse:main"

[project.urls]
Homepage = "https://github.com/DUBSOpenHub/copilot-cli-agent-pulse"
Repository = "https://github.com/DUBSOpenHub/copilot-cli-agent-pulse"
Issues = "https://github.com/DUBSOpenHub/copilot-cli-agent-pulse/issues"
